[package]
name = "bindgen-hates-macos"
version = "0.1.0"
authors = ["Logan Darklock <logandarklock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "~0.54.1", features = ["logging"] }
env_logger = "0.7.1"